[package]
name = "mdhtmlparser"
authors = ["Santiago Sanchez Taborda <santiago.sanchez.t@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
pulldown-cmark = "0.9.1"
maud = "0.23.0"
